<?xml version="1.0" encoding="utf-8"?>
<resources> 
	<!-- You must fill in the author_name string resource with your Cal Poly username. -->
	<string name="author_name">jsmith</string>
    <string name="app_name">JokeList</string> 
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Joke List</string>
    <string-array name="jokeList">
		<item>A small boy swallowed some coins and was taken to a hospital. When his grandfather telephoned to ask how he was a nurse said, \'No change yet\'.</item>
		<item>Cartoonist found dead in home. Details are sketchy.</item>
		<item>I wondered why the baseball was getting bigger. Then it hit me.</item>
	</string-array>
	<string name="remove_menuitem">Remove</string>
	<string name="filter_menuitem">Filter</string>
	<string name="like_menuitem">Like</string>
	<string name="dislike_menuitem">Dislike</string>
	<string name="unrated_menuitem">Unrated</string>
	<string name="show_all_menuitem">Show All</string>
	<string name="Add_Joke">Add Joke</string>
	<string name="Enter_joke">Enter a joke</string>
	<string name="test">This is a really long chunk of text that will be replaced,never to be seen again, when a JokeView is added to the list.</string>
	<string name="upload">Upload</string>
	<string name="download">Download</string>
</resources>