<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_filter" 
        android:title="@string/filter_menuitem" 
        android:showAsAction="ifRoom|withText">
        <menu>
            <group android:id="@+id/group_submenu">
                <item android:id="@+id/submenu_like" android:title="@string/like_menuitem"/>
                <item android:id="@+id/submenu_dislike" android:title="@string/dislike_menuitem"/>
                <item android:id="@+id/submenu_unrated" android:title="@string/unrated_menuitem"/>
                <item android:id="@+id/submenu_show_all" android:title="@string/show_all_menuitem"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/download_menu" android:title="@string/download" android:showAsAction="ifRoom|withText"></item>
</menu>
